--- a/q/23.html
+++ b/q/23.html
@@ -13,14 +13,14 @@
 <meta property="og:title" content="New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend"/>
 <meta property="og:description" content="New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend"/>
 <meta property="og:product:price" content="29.99"/>
-<link rel="stylesheet" href="https://c.zalalaa.com/q/p.min.css">
-<link rel="stylesheet" href="https://c.zalalaa.com/q/p.css">
-<script src="https://c.zalalaa.com/q/j.min.js"></script>
-<script src="https://c.zalalaa.com/q/pj.min.js"></script>
+<link rel="stylesheet" href="/q/p.min.css">
+<link rel="stylesheet" href="/q/p.css">
+<script src="/q/j.min.js"></script>
+<script src="/q/pj.min.js"></script>
 </head>
 <body>
 <div class="navbar shadow" id="navbar">
-  <a class="navbar-logo size-big" href="/index.html"><img src="https://c.zalalaa.com/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
+  <a class="navbar-logo size-big" href="/index.html"><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
   <div class="navbar-body" id="navbody">
     <ul class="nav">
       <li><a href="/index.html" title="Home">Home</a></li>
@@ -70,51 +70,51 @@
 	<h3 class="margin-bottom weight" align="center">New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend<sup class="badge">$:29.99</sup></h3>
         <time>2024-07-01</time>
 		<p>Number: A23</p> 
-		<p><a class="padding block" href="" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend" /> Buy Now <span class="text-danger">&#36;</span>:29.99</sup></a><img src="https://c.zalalaa.com/q/a.webp" alt="New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend"/></p>
+		<p><a class="padding block" href="" target="_blank"> <img src="/q/py.webp" alt="New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend" /> Buy Now <span class="text-danger">&#36;</span>:29.99</sup></a><img src="/q/a.webp" alt="New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend"/></p>
   <p>New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend</p>
   </div> 
   </div>
   <div class="grid big-grid-middle large-grid-large isplit-content">
 
     <div class="big-x12 grid discovers">
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240701/1719826872695139.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240701/1719826872695139.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719826872695139.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719826872695139.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A23</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240701/1719826879232022.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240701/1719826879232022.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719826879232022.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719826879232022.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A23-1</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240701/1719826991399903.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240701/1719826991399903.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719826991399903.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719826991399903.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A23-2</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240701/1719826886827244.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240701/1719826886827244.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719826886827244.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719826886827244.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A23-3</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240701/1719826879252999.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240701/1719826879252999.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719826879252999.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719826879252999.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A23-4</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240701/1719826886481832.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240701/1719826886481832.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719826886481832.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719826886481832.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A23-5</p>
@@ -128,43 +128,43 @@
       <div class="grid">
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719827829205743.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="/q/upload/other/20240701/1719827829205743.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/24.html" title="Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers,2024-07-01 17:53:32">Read More</a></div>
           </div>
         </div>
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719826678821251.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="/q/upload/other/20240701/1719826678821251.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/23.html" title="New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend,2024-07-01 17:31:41">Read More</a></div>
           </div>
         </div>
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719821466380643.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="/q/upload/other/20240701/1719821466380643.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/2.html" title="Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers,2024-07-01 16:13:40">Read More</a></div>
           </div>
         </div>
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719819186655198.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="/q/upload/other/20240701/1719819186655198.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/8.html" title="Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers,2024-07-01 15:18:27">Read More</a></div>
           </div>
         </div>
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719806402155946.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="/q/upload/other/20240701/1719806402155946.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/4.html" title="Embroidered lace fabric with three-dimensional spot flower patches on clothing, hot melt peony flowers,2024-07-01 15:16:13">Read More</a></div>
           </div>
         </div>
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240630/1719759794881169.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="/q/upload/other/20240630/1719759794881169.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/10.html" title="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories,2024-07-01 11:51:48">Read More</a></div>
           </div>
         </div>
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719794420979065.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="/q/upload/other/20240701/1719794420979065.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/15.html" title="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery,2024-06-30 08:38:13">Read More</a></div>
           </div>
         </div>
