--- a/q/patches/index.html
+++ b/q/patches/index.html
@@ -9,14 +9,14 @@
 <meta name="keywords" content="Embroidery stickers,Embroidery,cross-stitch,needlework,needlepoint,fancywork">
 <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
 <meta name="theme-color" content="#32CD32">
-<link rel="stylesheet" href="https://c.zalalaa.com/q/p.min.css">
-<link rel="stylesheet" href="https://c.zalalaa.com/q/p.css">
-<script src="https://c.zalalaa.com/q/j.min.js"></script>
-<script src="https://c.zalalaa.com/q/pj.min.js"></script>
+<link rel="stylesheet" href="/q/p.min.css">
+<link rel="stylesheet" href="/q/p.css">
+<script src="/q/j.min.js"></script>
+<script src="/q/pj.min.js"></script>
 </head>
 <body>
 <div class="navbar shadow" id="navbar">
-  <a class="navbar-logo size-big" href="/index.html"><img src="https://c.zalalaa.com/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
+  <a class="navbar-logo size-big" href="/index.html"><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
   <div class="navbar-body" id="navbody">
     <ul class="nav">
       <li><a href="/index.html" title="Home">Home</a></li>
@@ -40,13 +40,45 @@
 <br />
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
     <div class="grid">
-       <div class="big-x2 small-x6"><a href="/q/animal/index.html" title="Animal">Animal <span class="badge">2</span></a></div> <div class="big-x2 small-x6"><a href="/q/flower/index.html" title="Flower">Flower <span class="badge">15</span></a></div> 
+       <div class="big-x2 small-x6"><a href="/q/animal/index.html" title="Animal">Animal <span class="badge">6</span></a></div> <div class="big-x2 small-x6"><a href="/q/flower/index.html" title="Flower">Flower <span class="badge">15</span></a></div> 
     </div>
 </div>
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
   <h3 class="margin-bottom-mini weight" align="center">Applique Patches</h3>
   <div class="grid big-grid-middle large-grid-large isplit-content">
     <div class="big-x12 grid discovers">
+      <a class="big-x3 flex flex-column" href="/q/28.html" title="Cartoon Rabbit Astronaut,2024-07-06 09:42:46">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240706/1720230542547710.webp"  alt="Cartoon Rabbit Astronaut" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small"><span class="text-danger">&#36;</span>:12.99</strong>
+        <p class="size-small flex-grow">Cartoon rabbit astronaut embroidered fabric patch cute self-··· <br />Read More</p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/27.html" title="Cartoon animal embroidery stickers, teddy bear cloth stickers, cute DIY clothing accessories, decorative patch stickers,2024-07-06 08:35:35">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240706/1720226337562267.webp"  alt="Cartoon animal embroidery stickers, teddy bear cloth stickers, cute DIY clothing accessories, decorative patch stickers" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small"><span class="text-danger">&#36;</span>:19.99</strong>
+        <p class="size-small flex-grow">Cartoon animal embroidery stickers, teddy bear cloth sticker··· <br />Read More</p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/26.html" title="New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch,2024-07-05 19:20:43">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240705/1720178843729859.webp"  alt="New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small"><span class="text-danger">&#36;</span>:19.99</strong>
+        <p class="size-small flex-grow">New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesiv··· <br />Read More</p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/25.html" title="Cute cartoon puppy embroidered fabric patch for down jacket,2024-07-05 17:55:53">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240705/1720173688785484.webp"  alt="Cute cartoon puppy embroidered fabric patch for down jacket" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small"><span class="text-danger">&#36;</span>:19.99</strong>
+        <p class="size-small flex-grow">Cute cartoon puppy embroidered fabric patch for down jacketH··· <br />Read More</p>
+      </a>
       <a class="big-x3 flex flex-column" href="/q/24.html" title="Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers,2024-07-01 17:53:32">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240701/1719827829205743.webp"  alt="Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers" class="img-auto scale" /> </figure>
