--- a/q/16.html
+++ b/q/16.html
@@ -13,14 +13,14 @@
 <meta property="og:title" content="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set"/>
 <meta property="og:description" content="Embroidered lace cover, floral cloth patch, large peony embroidered water soluble set"/>
 <meta property="og:product:price" content="12.99"/>
-<link rel="stylesheet" href="https://c.zalalaa.com/q/p.min.css">
-<link rel="stylesheet" href="https://c.zalalaa.com/q/p.css">
-<script src="https://c.zalalaa.com/q/j.min.js"></script>
-<script src="https://c.zalalaa.com/q/pj.min.js"></script>
+<link rel="stylesheet" href="/q/p.min.css">
+<link rel="stylesheet" href="/q/p.css">
+<script src="/q/j.min.js"></script>
+<script src="/q/pj.min.js"></script>
 </head>
 <body>
 <div class="navbar shadow" id="navbar">
-  <a class="navbar-logo size-big" href="/index.html"><img src="https://c.zalalaa.com/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
+  <a class="navbar-logo size-big" href="/index.html"><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
   <div class="navbar-body" id="navbody">
     <ul class="nav">
       <li><a href="/index.html" title="Home">Home</a></li>
@@ -70,30 +70,30 @@
 	<h3 class="margin-bottom weight" align="center">Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set<sup class="badge">$:12.99</sup></h3>
         <time>2024-07-01</time>
 		<p>Number: A16</p> 
-		<p><a class="padding block" href="" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set" /> Buy Now <span class="text-danger">&#36;</span>:12.99</sup></a><img src="https://c.zalalaa.com/q/a.webp" alt="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set"/></p>
+		<p><a class="padding block" href="" target="_blank"> <img src="/q/py.webp" alt="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set" /> Buy Now <span class="text-danger">&#36;</span>:12.99</sup></a><img src="/q/a.webp" alt="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set"/></p>
   <p>Embroidered lace cover, floral cloth patch, large peony embroidered water soluble set</p>
   </div> 
   </div>
   <div class="grid big-grid-middle large-grid-large isplit-content">
 
     <div class="big-x12 grid discovers">
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240628/1719576394952389.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576394952389.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240628/1719576394952389.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576394952389.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow"></p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240628/1719576394952389.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576394952389.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240628/1719576394952389.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576394952389.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow"></p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240628/1719576399734438.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576399734438.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240628/1719576399734438.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576399734438.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow"></p>
@@ -107,7 +107,7 @@
       <div class="grid">
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719794556332881.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="/q/upload/other/20240701/1719794556332881.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/16.html" title="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set,2024-07-01 08:43:13">Read More</a></div>
           </div>
         </div>
