--- a/q/2.html
+++ b/q/2.html
@@ -13,14 +13,14 @@
 <meta property="og:title" content="Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers"/>
 <meta property="og:description" content="Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers"/>
 <meta property="og:product:price" content="9.99"/>
-<link rel="stylesheet" href="https://c.zalalaa.com/q/p.min.css">
-<link rel="stylesheet" href="https://c.zalalaa.com/q/p.css">
-<script src="https://c.zalalaa.com/q/j.min.js"></script>
-<script src="https://c.zalalaa.com/q/pj.min.js"></script>
+<link rel="stylesheet" href="/q/p.min.css">
+<link rel="stylesheet" href="/q/p.css">
+<script src="/q/j.min.js"></script>
+<script src="/q/pj.min.js"></script>
 </head>
 <body>
 <div class="navbar shadow" id="navbar">
-  <a class="navbar-logo size-big" href="/index.html"><img src="https://c.zalalaa.com/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
+  <a class="navbar-logo size-big" href="/index.html"><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
   <div class="navbar-body" id="navbody">
     <ul class="nav">
       <li><a href="/index.html" title="Home">Home</a></li>
@@ -70,107 +70,107 @@
 	<h3 class="margin-bottom weight" align="center">Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers<sup class="badge">$:9.99</sup></h3>
         <time>2024-07-01</time>
 		<p>Number: A2</p> 
-		<p><a class="padding block" href="" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers" /> Buy Now <span class="text-danger">&#36;</span>:9.99</sup></a><img src="https://c.zalalaa.com/q/a.webp" alt="Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers"/></p>
+		<p><a class="padding block" href="" target="_blank"> <img src="/q/py.webp" alt="Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers" /> Buy Now <span class="text-danger">&#36;</span>:9.99</sup></a><img src="/q/a.webp" alt="Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers"/></p>
   <p>Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers.</p><p><br/></p><p>3D binding without adhesive backing.</p>
   </div> 
   </div>
   <div class="grid big-grid-middle large-grid-large isplit-content">
 
     <div class="big-x12 grid discovers">
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240701/1719821572670537.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240701/1719821572670537.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719821572670537.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719821572670537.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Embroidered lace three-dimensional fabric patch</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240701/1719821572678952.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240701/1719821572678952.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719821572678952.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719821572678952.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Embroidered lace three-dimensional fabric patch</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240701/1719821572589677.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240701/1719821572589677.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719821572589677.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719821572589677.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Embroidered lace three-dimensional fabric patch</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240701/1719821572352926.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240701/1719821572352926.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719821572352926.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719821572352926.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Embroidered lace three-dimensional fabric patch</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240701/1719822093171688.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240701/1719822093171688.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719822093171688.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719822093171688.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A2-1</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240701/1719822093465806.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240701/1719822093465806.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719822093465806.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719822093465806.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A2-2</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240701/1719822093988766.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240701/1719822093988766.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719822093988766.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719822093988766.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A2-3</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240701/1719822093410832.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240701/1719822093410832.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719822093410832.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719822093410832.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A2-4</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240701/1719822093336534.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240701/1719822093336534.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719822093336534.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719822093336534.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A2-5</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240701/1719822093481303.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240701/1719822093481303.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719822093481303.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719822093481303.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A2-6</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240701/1719822093615901.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240701/1719822093615901.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719822093615901.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719822093615901.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A2-7</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240701/1719822093632159.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240701/1719822093632159.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719822093632159.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719822093632159.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A2-8</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240701/1719822093391741.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240701/1719822093391741.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719822093391741.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719822093391741.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A2-9</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240701/1719822093375977.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240701/1719822093375977.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719822093375977.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719822093375977.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A2-10</p>
@@ -184,43 +184,43 @@
       <div class="grid">
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719827829205743.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="/q/upload/other/20240701/1719827829205743.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/24.html" title="Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers,2024-07-01 17:53:32">Read More</a></div>
           </div>
         </div>
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719826678821251.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="/q/upload/other/20240701/1719826678821251.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/23.html" title="New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend,2024-07-01 17:31:41">Read More</a></div>
           </div>
         </div>
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719821466380643.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="/q/upload/other/20240701/1719821466380643.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/2.html" title="Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers,2024-07-01 16:13:40">Read More</a></div>
           </div>
         </div>
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719819186655198.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="/q/upload/other/20240701/1719819186655198.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/8.html" title="Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers,2024-07-01 15:18:27">Read More</a></div>
           </div>
         </div>
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719806402155946.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="/q/upload/other/20240701/1719806402155946.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/4.html" title="Embroidered lace fabric with three-dimensional spot flower patches on clothing, hot melt peony flowers,2024-07-01 15:16:13">Read More</a></div>
           </div>
         </div>
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240630/1719759794881169.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="/q/upload/other/20240630/1719759794881169.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/10.html" title="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories,2024-07-01 11:51:48">Read More</a></div>
           </div>
         </div>
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719794420979065.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="/q/upload/other/20240701/1719794420979065.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/15.html" title="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery,2024-06-30 08:38:13">Read More</a></div>
           </div>
         </div>
