--- a/q/9.html
+++ b/q/9.html
@@ -13,14 +13,14 @@
 <meta property="og:title" content="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product"/>
 <meta property="og:description" content="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product"/>
 <meta property="og:product:price" content="9.99"/>
-<link rel="stylesheet" href="https://c.zalalaa.com/q/p.min.css">
-<link rel="stylesheet" href="https://c.zalalaa.com/q/p.css">
-<script src="https://c.zalalaa.com/q/j.min.js"></script>
-<script src="https://c.zalalaa.com/q/pj.min.js"></script>
+<link rel="stylesheet" href="/q/p.min.css">
+<link rel="stylesheet" href="/q/p.css">
+<script src="/q/j.min.js"></script>
+<script src="/q/pj.min.js"></script>
 </head>
 <body>
 <div class="navbar shadow" id="navbar">
-  <a class="navbar-logo size-big" href="/index.html"><img src="https://c.zalalaa.com/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
+  <a class="navbar-logo size-big" href="/index.html"><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
   <div class="navbar-body" id="navbody">
     <ul class="nav">
       <li><a href="/index.html" title="Home">Home</a></li>
@@ -70,149 +70,149 @@
 	<h3 class="margin-bottom weight" align="center">Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product<sup class="badge">$:9.99</sup></h3>
         <time>2024-07-01</time>
 		<p>Number: A9</p> 
-		<p><a class="padding block" href="" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product" /> Buy Now <span class="text-danger">&#36;</span>:9.99</sup></a><img src="https://c.zalalaa.com/q/a.webp" alt="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product"/></p>
+		<p><a class="padding block" href="" target="_blank"> <img src="/q/py.webp" alt="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product" /> Buy Now <span class="text-danger">&#36;</span>:9.99</sup></a><img src="/q/a.webp" alt="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product"/></p>
   <p>Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product</p>
   </div> 
   </div>
   <div class="grid big-grid-middle large-grid-large isplit-content">
 
     <div class="big-x12 grid discovers">
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240628/1719576827388624.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576827388624.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240628/1719576827388624.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576827388624.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Embroidered</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240628/1719576843113029.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576843113029.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240628/1719576843113029.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576843113029.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Embroidered</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240628/1719576846447497.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576846447497.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240628/1719576846447497.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576846447497.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Embroidered</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240628/1719576856958959.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576856958959.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240628/1719576856958959.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576856958959.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A9-2</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240628/1719576856555027.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576856555027.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240628/1719576856555027.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576856555027.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A9-3</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240628/1719576856161288.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576856161288.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240628/1719576856161288.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576856161288.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A9-4</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240628/1719576856715162.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576856715162.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240628/1719576856715162.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576856715162.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A9-5</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240628/1719576856645983.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576856645983.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240628/1719576856645983.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576856645983.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A9-6</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240628/1719576856470802.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576856470802.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240628/1719576856470802.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576856470802.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A9-7</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240628/1719576856622626.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576856622626.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240628/1719576856622626.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576856622626.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A9-8</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240628/1719576856982591.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576856982591.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240628/1719576856982591.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576856982591.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A9-9</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240628/1719576856923161.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576856923161.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240628/1719576856923161.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576856923161.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A9-10</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240628/1719576856436102.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576856436102.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240628/1719576856436102.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576856436102.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A9-11</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240628/1719576856241313.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576856241313.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240628/1719576856241313.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576856241313.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A9-12</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240628/1719576856278538.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576856278538.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240628/1719576856278538.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576856278538.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A9-13</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240628/1719576856130688.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576856130688.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240628/1719576856130688.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576856130688.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A9-14</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240628/1719576856472497.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576856472497.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240628/1719576856472497.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576856472497.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A9-15</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240628/1719576856677915.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576856677915.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240628/1719576856677915.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576856677915.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A9-16</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240628/1719576856931127.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576856931127.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240628/1719576856931127.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576856931127.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A9-17</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240628/1719576856944140.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576856944140.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240628/1719576856944140.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576856944140.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A9-18</p>
