--- a/q/abouts/index.html
+++ b/q/abouts/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <div class="navbar shadow" id="navbar">
-  <a class="navbar-logo size-big" href="/index.html"><img src="https://c.zalalaa.com/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
+  <a class="navbar-logo size-big" href="/index.html"><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
   <div class="navbar-body" id="navbody">
     <ul class="nav">
       <li><a href="/index.html" title="Home">Home</a></li>
@@ -52,7 +52,7 @@
       </a>
     </div>
     <div class="big-x8">
-      <p>Zalalaa Committed to garment accessories lace design, production and sales. The main products are: water soluble (milk silk, polyester light, cotton embroidery fabric and lace), bead embroidery, towel embroidery, chiffon, lace, etc.&nbsp;</p><p>Fashion and high quality lace make customers extraordinary.</p><p>Email: web@zalalaa.com</p><p><br/></p><p><br/></p><p><img src="/q/py.webp"/></p><p>9050150@qq.com</p><p><br/></p><p><img src="/q/a.webp"/></p><p><br/></p><p>How to remit to Alipay?</p><p>&nbsp; Where can I send money?</p><p>&nbsp; https://remit.alipay.com</p><p>&nbsp; What information should I fill in at the money transfer platform?</p><p>&nbsp; Alipay ID (账号)</p><p>&nbsp; 9050150@qq.com</p><p>&nbsp; Last Name(姓)</p><p>&nbsp; LI</p><p>&nbsp; First Name(名)</p><p>&nbsp; QUAN</p><p><br/></p>
+      <p>Zalalaa Committed to garment accessories lace design, production and sales. The main products are: water soluble (milk silk, polyester light, cotton embroidery fabric and lace), bead embroidery, towel embroidery, chiffon, lace, etc.&nbsp;</p><p>Fashion and high quality lace make customers extraordinary.</p><p>Email: web@zalalaa.com</p><p><br/></p><p><span style="background-color: rgb(255, 255, 0);">Free shipping for stores over $200</span></p><p><img src="/q/py.webp"/></p><p>9050150@qq.com</p><p><br/></p><p><img src="/q/a.webp"/></p><p><br/></p><p>How to remit to Alipay?</p><p>&nbsp; Where can I send money?</p><p>&nbsp; https://remit.alipay.com</p><p>&nbsp; What information should I fill in at the money transfer platform?</p><p>&nbsp; Alipay ID (账号)</p><p>&nbsp; 9050150@qq.com</p><p>&nbsp; Last Name(姓)</p><p>&nbsp; LI</p><p>&nbsp; First Name(名)</p><p>&nbsp; QUAN</p><p><br/></p>
     </div>
   </div>
    <div class="grid big-grid-middle large-grid-large isplit-content">
