--- a/q/order/index.html
+++ b/q/order/index.html
@@ -9,14 +9,14 @@
 <meta name="keywords" content="Embroidery stickers,Embroidery,cross-stitch,needlework,needlepoint,fancywork">
 <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
 <meta name="theme-color" content="#32CD32">
-<link rel="stylesheet" href="https://c.zalalaa.com/q/p.min.css">
-<link rel="stylesheet" href="https://c.zalalaa.com/q/p.css">
-<script src="https://c.zalalaa.com/q/j.min.js"></script>
-<script src="https://c.zalalaa.com/q/pj.min.js"></script>
+<link rel="stylesheet" href="/q/p.min.css">
+<link rel="stylesheet" href="/q/p.css">
+<script src="/q/j.min.js"></script>
+<script src="/q/pj.min.js"></script>
 </head>
 <body>
 <div class="navbar shadow" id="navbar">
-  <a class="navbar-logo size-big" href="/index.html"><img src="https://c.zalalaa.com/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
+  <a class="navbar-logo size-big" href="/index.html"><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
   <div class="navbar-body" id="navbody">
     <ul class="nav">
       <li><a href="/index.html" title="Home">Home</a></li>
@@ -40,7 +40,7 @@
 <br />
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
     <div class="grid">
-       <div class="big-x2 small-x6"><a href="/q/animal/index.html" title="Animal">Animal <span class="badge">2</span></a></div> <div class="big-x2 small-x6"><a href="/q/flower/index.html" title="Flower">Flower <span class="badge">15</span></a></div> 
+       <div class="big-x2 small-x6"><a href="/q/animal/index.html" title="Animal">Animal <span class="badge">6</span></a></div> <div class="big-x2 small-x6"><a href="/q/flower/index.html" title="Flower">Flower <span class="badge">15</span></a></div> 
     </div>
 </div>
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
